# PrediGol

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  vercel.json
docs/: admin-predigol.md  api-football-fase13-operacion.md  api-football-predictions.md  arquitectura-pagos-predigol.md  auditoria-fase10a-predigol.md  auditoria-fase8d-predigol.md  auditoria-fase8f-predigol.md  auditoria-fase8g-predigol.md  auditoria-fase8h-predigol.md  auditoria-fase8i-predigol.md  auditoria-fase9a-predigol.md  auditoria-fase9b-predigol.md  auditoria-fase9c-predigol.md  auditoria-fase9d-predigol.md  backtest-v1-v2.md  (+48 more)
prediction-service/: .env.example  .gitignore  README.md  pyproject.toml
prediction-service/predigol_model/: __init__.py  api_football_importer.py  comparative_backtest.py  config.py  data_importer.py  data_quality.py  diagnostics.py  evaluation.py  external_football_api.py  importers.py  poisson_elo.py  preflight.py  run.py  supabase_client.py  team_normalization.py  traceability.py  v2.py
prediction-service/tests/: test_api_football_importer.py  test_comparative_backtest.py  test_data_quality.py  test_dataset_scripts.py  test_evaluation.py  test_importar_fixtures_proximos_mvp.py  test_importers.py  test_preflight.py  test_publicar_predicciones_v1_mvp.py  test_supabase_security_static.py  test_team_normalization.py  test_v2_model.py  test_verificar_acceso_api_football.py  test_verificar_despliegue_predigol.py  test_verificar_roles_supabase.py  test_verificar_salud_produccion_predigol.py  test_verificar_supabase_mvp.py
(+191 files in other folders)
