[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predigol-prediction-service"
version = "0.1.0"
description = "PrediGol prediction and backtesting service"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[tool.setuptools]
packages = ["predigol_model"]
